--- a/public/css/common.css
+++ b/public/css/common.css
@@ -503,6 +503,7 @@ textarea {
   .ft-cp {
     padding: 1.953vw 0;
     font-size: 1.465vw;
+    margin-top: 9vw;
   }
 
   #content {
