--- a/public/css/employee/employeeupload.css
+++ b/public/css/employee/employeeupload.css
@@ -179,4 +179,8 @@
     margin-top: 2.344vw;
     text-align: center;
   }
+
+  .ft-cp{
+    margin-top: 0;
+  }
 }
