--- a/public/css/payroll/calculate.css
+++ b/public/css/payroll/calculate.css
@@ -129,4 +129,7 @@
     font-size: 1.953vw;
     color: #7992e2;
   }
+  .ft-cp{
+    margin-top: 2vw;
+  }
 }
