--- a/public/css/project/index.css
+++ b/public/css/project/index.css
@@ -154,4 +154,8 @@
     background: #fff;
     color: #4966e7;
   }
+
+  .ft-cp{
+    margin-top: 0;
+  }
 }
